[package]
name = "batch-lp"
version = "1.0.1"
edition = "2021"
authors = ["batch-lp contributors"]
description = "High-performance batched linear programming solver using HiGHS with parallel execution"
license = "MIT"
repository = "https://github.com/landonclark97/batch-lp"
homepage = "https://github.com/landonclark97/batch-lp"
keywords = ["linear-programming", "optimization", "highs", "parallel"]
categories = ["science", "mathematics"]

[lib]
name = "batch_lp"
crate-type = ["cdylib", "rlib"]

[dependencies]
highs = "2.0"
rayon = "1.10"
thiserror = "1.0"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
