[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "batch-lp"
version = "1.0.1"
description = "High-performance batched linear programming solver using HiGHS with parallel execution"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Landon Clark" }
]
keywords = ["linear-programming", "optimization", "highs", "parallel", "batch", "lp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/landonclark97/batch-lp"
Repository = "https://github.com/landonclark97/batch-lp"
Issues = "https://github.com/landonclark97/batch-lp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "batch_lp"
